# kaldi-android

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  KaldiUtil.cpp  kaldi.h
app/src/main/java/com/cuiweiyou/kaldiandroid/: MainActivity.java
app/src/main/java/com/cuiweiyou/kaldiandroid/util/: KaldiUtil.java
app/src/main/res/values/: strings.xml  themes.xml
